<resources>
        <string name="app_name">StudentManagementSystem</string>
        <string name="hello">Hello World, MyApp!</string>
        <string name="title">Student Details</string>
        <string name="roll_no">Enter Rollno: </string>
        <string name="name">Enter Name: </string>
        <string name="marks">Enter Marks: </string>
        <string name="add">Add</string>
        <string name="delete">Delete</string>
        <string name="modify">Modify</string>
        <string name="view">View</string>
        <string name="view_all">View All</string>
        <string name="show_info">Show Information</string>
</resources>
