<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/myLayout"
    android:stretchColumns="0"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#000000">
    <TextView android:text="@string/title"
        android:textColor="#ffffff"
        android:textSize="20dp"
        android:layout_x="110dp"
        android:layout_y="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView android:text="@string/roll_no"
        android:textColor="#ffffff"
        android:textSize="15dp"
        android:layout_x="30dp"
        android:layout_y="60dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <EditText android:id="@+id/editRollno"
        android:background="#ffffff"
        android:inputType="number"
        android:layout_x="150dp"
        android:layout_y="50dp"
        android:layout_width="150dp"
        android:layout_height="40dp"/>
    <TextView android:text="@string/name"
        android:textColor="#ffffff"
        android:textSize="15dp"
        android:layout_x="30dp"
        android:layout_y="110dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <EditText android:id="@+id/editName"
        android:background="#ffffff"
        android:inputType="text"
        android:layout_x="150dp"
        android:layout_y="100dp"
        android:layout_width="150dp"
        android:layout_height="40dp"/>
    <TextView android:text="@string/marks"
        android:textColor="#ffffff"
        android:textSize="15dp"
        android:layout_x="30dp"
        android:layout_y="160dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <EditText android:id="@+id/editMarks"
        android:background="#ffffff"
        android:inputType="number"
        android:layout_x="150dp"
        android:layout_y="150dp"
        android:layout_width="150dp"
        android:layout_height="40dp"/>
    <Button	  android:id="@+id/btnAdd"
        android:text="@string/add"
        android:layout_x="30dp"
        android:layout_y="220dp"
        android:layout_width="100dp"
        android:layout_height="40dp"/>
    <Button	  android:id="@+id/btnDelete"
        android:text="@string/delete"
        android:layout_x="150dp"
        android:layout_y="220dp"
        android:layout_width="100dp"
        android:layout_height="40dp"/>
    <Button   android:id="@+id/btnModify"
        android:text="@string/modify"
        android:layout_x="30dp"
        android:layout_y="270dp"
        android:layout_width="100dp"
        android:layout_height="40dp"/>
    <Button   android:id="@+id/btnView"
        android:text="@string/view"
        android:layout_x="150dp"
        android:layout_y="270dp"
        android:layout_width="100dp"
        android:layout_height="40dp"/>
    <Button   android:id="@+id/btnViewAll"
        android:text="@string/view_all"
        android:layout_x="30dp"
        android:layout_y="320dp"
        android:layout_width="100dp"
        android:layout_height="40dp"/>
    <Button   android:id="@+id/btnShowInfo"
        android:text="@string/show_info"
        android:layout_x="150dp"
        android:layout_y="320dp"
        android:layout_width="100dp"
        android:layout_height="40dp"/>
</AbsoluteLayout>